hphp/hack/test/typecheck/construct_consist1.php.exp
File "construct_consist1.php", line 8, characters 19-29:
Member __construct has the wrong type (Typing[4341])
File "construct_consist1.php", line 8, characters 19-29:
Too many mandatory arguments
File "construct_consist1.php", line 4, characters 7-8:
Because of this definition
